--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "config": "^3.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "mysql": "^2.16.0"
   }
 }
