--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "config": "^3.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-group-routes": "^1.1.0",
     "fs": "0.0.1-security",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "router": "^1.3.3"
   }
 }
