--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "config": "^3.0.0",
+    "connect-redis": "^3.4.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-group-routes": "^1.1.0",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "mysql": "^2.16.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "router": "^1.3.3"
   }
 }
