--- a/package.json
+++ b/package.json
@@ -17,19 +17,23 @@
   },
   "homepage": "https://github.com/kratew/ISB#readme",
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.18.3",
     "config": "^3.0.0",
-    "connect-redis": "^3.4.0",
+    "connect-flash": "^0.1.1",
+    "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^1.3.3",
+    "csurf": "^1.9.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-group-routes": "^1.1.0",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
+    "helmet": "^3.16.0",
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "redis": "^2.8.0",
     "router": "^1.3.3",
     "session": "^0.1.0"
   }
